@@ -1,3 +1,11 @@
+2002-11-15  Bharat Mediratta  <bharat@menalto.com> 1.3.2-cvs-b29
+
+	* Fixed bug #638939: Publish XP gives wrong URL (Guido Claessen)
+	  We were hand rolling the URL that appears at the end of the wizard,
+	  which would lead to it not working when rewriting is disabled.
+
+	* Tightened up the description of the publisher
+
 2002-11-13  Bharat Mediratta  <bharat@menalto.com> 1.3.2-cvs-b28
 
 	* Rolled in Joan McGalliard's patch to allow users to add captions
